frontend/test/should_fail/index_isin_edge_fromto_argument_mismatch.grg
#using "index_count_edge_model.gm"

rule i {
	-e:E->;
	
	if{ isInEdgesFromIndexFromTo(e, fooi, 42, enu::bar); }
	
	modify {
	}
}
